version 0.42
	* Bug fixes and code cleanups
	* Handle read only stores when cut & pasting elements
	* Simple reminders/alarms handling with multiple backends
	* New images from OpenClipArt (bell_gold.svg)

version 0.41 (2010/03/15)
	* Threads/memory pools/notifications fixes
	* Fix silly bugs in the makefile when using conditions : we 
	  always tried to link with libuuid and Addresses even when 
	  configure didn't detect them
	* Big changes in ConfigManager : it doesn't retain its listeners 
	  anymore and listeners are now global. It means that you can 
	  register for any key with any ConfigManager instance.
	* New ABStore that creates birthday events from Addresses contacts 
	  if the Addresses framework is available.
	* New application icon from OpenClipArt

version 0.40 (2010/03/05)
	* Display tooltips over appointments if the user want them
	* Use libuuid to generate unique event ids if available
	* Fix ticket #13 : iCalendar stores can use local files
	* The appointment editor becomes non modal
	* The task editor becomes non modal
	* Internationalization infrastructure and beginning of a french
	  translation
	* Set application title from the selected date and tab
	* Show today's date in the appicon
	* Use a human readable description for colors in defaults
	* Show time in the appicon
	* Add a new UI Preferences panel and use it for tooltips and 
	  date and time in the appicon
	* Full keyboard navigation in appointment and task dialogs
 	  (you can use the Tab key in the description fields, yeah !)
	* Better navigation performances with lots of appointments
	* Bug fixes thanks to Fred Kiefer, James Jordan, Sergey Golovin 
	  and Sebastian Reitenbach

version 0.39 (2009/09/20)
	* Code cleanups (as always)
	* Fix empty Task tab on startup bug
	* Add configure step to locate libical header and clean
	  the makefile while we're at it
	* Allow event selection and edition in the week view
	* Fix ticket #10 (appointment going past midnight not