@@ -3,6 +3,7 @@
 #import <Foundation/Foundation.h>
 
 @class Element;
+@class SAAlarm;
 
 @interface AlarmEditor : NSObject
 {
@@ -13,10 +14,17 @@
   id table;
   id add;
   id remove;
+  id relativeSlider;
+  id relativeText;
+  id radio;
   NSMutableArray *_alarms;
+  SAAlarm *_current;
+  SAAlarm *_simple;
 }
 
 + (NSArray *)editAlarms:(NSArray *)alarms;
 - (void)addAlarm:(id)sender;
 - (void)removeAlarm:(id)sender;
+- (void)changeDelay:(id)sender;
+- (void)switchBeforeAfter:(id)sender;
 @end
